<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".read.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true">

                <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                            android:layout_width="match_parent"
                            android:layout_height="184dp"
                            android:background="@android:color/transparent">

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="?attr/colorSecondaryContainer" />

                        <androidx.cardview.widget.CardView
                                android:id="@+id/cadastrados"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="50dp"
                                android:minHeight="90dp"
                                app:cardBackgroundColor="#585666"
                                app:cardCornerRadius="50dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/avatar"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentStart="true"
                                    android:importantForAccessibility="no" />

                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/avatar_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentStart="true"
                                    android:gravity="center"
                                    android:importantForAccessibility="no"
                                    android:textColor="@android:color/white"
                                    android:visibility="gone"
                                    tools:text="BR"
                                    tools:visibility="visible" />

                        </androidx.cardview.widget.CardView>

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header"
                        tools:text="Name" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/contact"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        tools:text="email@email.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            <Button
                    android:id="@+id/qr_code"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/fragment_profile_qr_code_button_text" />

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            <Button
                    android:id="@+id/edit_profile"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/fragment_profile_edit_profile_button_text" />

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            <Button
                    android:id="@+id/settings"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/fragment_profile_settings_button_text" />

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            <Button
                    android:id="@+id/logout"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/fragment_profile_logout_button_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>